test.output
Terminals unused in grammar

   SEMICOLON
   FIELD_INFORMATION
   FIELD


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: abctune $end

    1 abctune: abc_header eol

    2 abc_header: FIELD_NUMBER NUMBER title_fields fields
    3           | title_fields fields
    4           | fields

    5 title_fields: STRING eol

    6 eol: '\n'

    7 fields: /* empty */
    8       | fields field

    9 field: FIELD_NUMBER NUMBER eol
   10      | FIELD_TITLE STRING eol
   11      | FIELD_AREA STRING eol
   12      | FIELD_BOOK STRING eol
   13      | FIELD_COMPOSER STRING eol
   14      | FIELD_DISCOGRAPHY STRING eol
   15      | FIELD_GROUP STRING eol
   16      | FIELD_HISTORY STRING eol
   17      | FIELD_DEFAULT_LENGTH note_length eol
   18      | FIELD_METER meter eol
   19      | FIELD_NOTES STRING eol
   20      | FIELD_ORIGIN STRING eol
   21      | FIELD_PARTS STRING eol
   22      | FIELD_TEMPO tempo eol
   23      | FIELD_RHYTHM STRING eol
   24      | FIELD_SOURCE STRING eol
   25      | FIELD_TRANSCRIPTION STRING eol
   26      | FIELD_KEY key eol

   27 key: key_spec
   28    | "HP"
   29    | "Hp"

   30 key_spec: keynote mode_spec ' ' global_accidental
   31         | keynote ' ' global_accidental

   32 keynote: basenote key_accidental
   33        | basenote

   34 key_accidental: '#'
   35               | 'b'

   36 meter: 'C'
   37      | meter_fraction

   38 meter_fraction: NUMBER '/' NUMBER

   39 mode_spec: ' ' mode
   40          | mode

   41 mode: mode_minor

   42 mode_minor: 'm'
   43           | 'M'

   44 note_length_strict: NUMBER '/' NUMBER

   45 note_length: NUMBER '/' NUMBER
   46            | NUMBER

   47 global_accidental: accidental basenote

   48 basenote: 'C'
   49         | 'D'
   50         | 'E'
   51         | 'F'
   52         | 'G'
   53         | 'A'
   54         | 'B'
   55         | 'c'
   56         | 'd'
   57         | 'e'
   58         | 'f'
   59         | 'g'
   60         | 'a'
   61         | 'b'

   62 accidental: ACCIDENTAL

   63 tempo: NUMBER
   64      | 'C' NUMBER '=' NUMBER
   65      | 'C' '=' NUMBER
   66      | note_length_strict '=' NUMBER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 6
' ' (32) 30 31 39
'#' (35) 34
'/' (47) 38 44 45
'=' (61) 64 65 66
'A' (65) 53
'B' (66) 54
'C' (67) 36 48 64 65
'D' (68) 49
'E' (69) 50
'F' (70) 51
'G' (71) 52
'M' (77) 43
'a' (97) 60
'b' (98) 35 61
'c' (99) 55
'd' (100) 56
'e' (101) 57
'f' (102) 58
'g' (103) 59
'm' (109) 42
error (256)
SEMICOLON (258)
FIELD_NUMBER (259) 2 9
FIELD_TITLE (260) 10
FIELD_AREA (261) 11
FIELD_BOOK (262) 12
FIELD_COMPOSER (263) 13
FIELD_DISCOGRAPHY (264) 14
FIELD_GROUP (265) 15
FIELD_HISTORY (266) 16
FIELD_INFORMATION (267)
FIELD_DEFAULT_LENGTH (268) 17
FIELD_METER (269) 18
FIELD_NOTES (270) 19
FIELD_ORIGIN (271) 20
FIELD_PARTS (272) 21
FIELD_TEMPO (273) 22
FIELD_RHYTHM (274) 23
FIELD_SOURCE (275) 24
FIELD_TRANSCRIPTION (276) 25
FIELD_KEY (277) 26
NUMBER (278) 2 9 38 44 45 46 63 64 65 66
STRING (279) 5 10 11 12 13 14 15 16 19 20 21 23 24 25
FIELD (280)
ACCIDENTAL (281) 62
"HP" (282) 28
"Hp" (283) 29


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
abctune (51)
    on left: 1, on right: 0
abc_header (52)
    on left: 2 3 4, on right: 1
title_fields (53)
    on left: 5, on right: 2 3
eol (54)
    on left: 6, on right: 1 5 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26
fields (55)
    on left: 7 8, on right: 2 3 4 8
field (56)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26,
    on right: 8
key (57)
    on left: 27 28 29, on right: 26
key_spec (58)
    on left: 30 31, on right: 27
keynote (59)
    on left: 32 33, on right: 30 31
key_accidental (60)
    on left: 34 35, on right: 32
meter (61)
    on left: 36 37, on right: 18
meter_fraction (62)
    on left: 38, on right: 37
mode_spec (63)
    on left: 39 40, on right: 30
mode (64)
    on left: 41, on right: 39 40
mode_minor (65)
    on left: 42 43, on right: 41
note_length_strict (66)
    on left: 44, on right: 66
note_length (67)
    on left: 45 46, on right: 17
global_accidental (68)
    on left: 47, on right: 30 31
basenote (69)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61, on right: 32
    33 47
accidental (70)
    on left: 62, on right: 47
tempo (71)
    on left: 63 64 65 66, on right: 22


state 0

    0 $accept: . abctune $end

    FIELD_NUMBER  shift, and go to state 1
    STRING        shift, and go to state 2

    FIELD_NUMBER  [reduce using rule 7 (fields)]
    $default      reduce using rule 7 (fields)

    abctune       go to state 3
    abc_header    go to state 4
    title_fields  go to state 5
    fields        go to state 6


state 1

    2 abc_header: FIELD_NUMBER . NUMBER title_fields fields

    NUMBER  shift, and go to state 7


state 2

    5 title_fields: STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 9


state 3

    0 $accept: abctune . $end

    $end  shift, and go to state 10


state 4

    1 abctune: abc_header . eol

    '\n'  shift, and go to state 8

    eol  go to state 11


state 5

    3 abc_header: title_fields . fields

    $default  reduce using rule 7 (fields)

    fields  go to state 12


state 6

    4 abc_header: fields .
    8 fields: fields . field

    FIELD_NUMBER          shift, and go to state 13
    FIELD_TITLE           shift, and go to state 14
    FIELD_AREA            shift, and go to state 15
    FIELD_BOOK            shift, and go to state 16
    FIELD_COMPOSER        shift, and go to state 17
    FIELD_DISCOGRAPHY     shift, and go to state 18
    FIELD_GROUP           shift, and go to state 19
    FIELD_HISTORY         shift, and go to state 20
    FIELD_DEFAULT_LENGTH  shift, and go to state 21
    FIELD_METER           shift, and go to state 22
    FIELD_NOTES           shift, and go to state 23
    FIELD_ORIGIN          shift, and go to state 24
    FIELD_PARTS           shift, and go to state 25
    FIELD_TEMPO           shift, and go to state 26
    FIELD_RHYTHM          shift, and go to state 27
    FIELD_SOURCE          shift, and go to state 28
    FIELD_TRANSCRIPTION   shift, and go to state 29
    FIELD_KEY             shift, and go to state 30

    $default  reduce using rule 4 (abc_header)

    field  go to state 31


state 7

    2 abc_header: FIELD_NUMBER NUMBER . title_fields fields

    STRING  shift, and go to state 2

    title_fields  go to state 32


state 8

    6 eol: '\n' .

    $default  reduce using rule 6 (eol)


state 9

    5 title_fields: STRING eol .

    $default  reduce using rule 5 (title_fields)


state 10

    0 $accept: abctune $end .

    $default  accept


state 11

    1 abctune: abc_header eol .

    $default  reduce using rule 1 (abctune)


state 12

    3 abc_header: title_fields fields .
    8 fields: fields . field

    FIELD_NUMBER          shift, and go to state 13
    FIELD_TITLE           shift, and go to state 14
    FIELD_AREA            shift, and go to state 15
    FIELD_BOOK            shift, and go to state 16
    FIELD_COMPOSER        shift, and go to state 17
    FIELD_DISCOGRAPHY     shift, and go to state 18
    FIELD_GROUP           shift, and go to state 19
    FIELD_HISTORY         shift, and go to state 20
    FIELD_DEFAULT_LENGTH  shift, and go to state 21
    FIELD_METER           shift, and go to state 22
    FIELD_NOTES           shift, and go to state 23
    FIELD_ORIGIN          shift, and go to state 24
    FIELD_PARTS           shift, and go to state 25
    FIELD_TEMPO           shift, and go to state 26
    FIELD_RHYTHM          shift, and go to state 27
    FIELD_SOURCE          shift, and go to state 28
    FIELD_TRANSCRIPTION   shift, and go to state 29
    FIELD_KEY             shift, and go to state 30

    $default  reduce using rule 3 (abc_header)

    field  go to state 31


state 13

    9 field: FIELD_NUMBER . NUMBER eol

    NUMBER  shift, and go to state 33


state 14

   10 field: FIELD_TITLE . STRING eol

    STRING  shift, and go to state 34


state 15

   11 field: FIELD_AREA . STRING eol

    STRING  shift, and go to state 35


state 16

   12 field: FIELD_BOOK . STRING eol

    STRING  shift, and go to state 36


state 17

   13 field: FIELD_COMPOSER . STRING eol

    STRING  shift, and go to state 37


state 18

   14 field: FIELD_DISCOGRAPHY . STRING eol

    STRING  shift, and go to state 38


state 19

   15 field: FIELD_GROUP . STRING eol

    STRING  shift, and go to state 39


state 20

   16 field: FIELD_HISTORY . STRING eol

    STRING  shift, and go to state 40


state 21

   17 field: FIELD_DEFAULT_LENGTH . note_length eol

    NUMBER  shift, and go to state 41

    note_length  go to state 42


state 22

   18 field: FIELD_METER . meter eol

    NUMBER  shift, and go to state 43
    'C'     shift, and go to state 44

    meter           go to state 45
    meter_fraction  go to state 46


state 23

   19 field: FIELD_NOTES . STRING eol

    STRING  shift, and go to state 47


state 24

   20 field: FIELD_ORIGIN . STRING eol

    STRING  shift, and go to state 48


state 25

   21 field: FIELD_PARTS . STRING eol

    STRING  shift, and go to state 49


state 26

   22 field: FIELD_TEMPO . tempo eol

    NUMBER  shift, and go to state 50
    'C'     shift, and go to state 51

    note_length_strict  go to state 52
    tempo               go to state 53


state 27

   23 field: FIELD_RHYTHM . STRING eol

    STRING  shift, and go to state 54


state 28

   24 field: FIELD_SOURCE . STRING eol

    STRING  shift, and go to state 55


state 29

   25 field: FIELD_TRANSCRIPTION . STRING eol

    STRING  shift, and go to state 56


state 30

   26 field: FIELD_KEY . key eol

    "HP"  shift, and go to state 57
    "Hp"  shift, and go to state 58
    'b'   shift, and go to state 59
    'C'   shift, and go to state 60
    'D'   shift, and go to state 61
    'E'   shift, and go to state 62
    'F'   shift, and go to state 63
    'G'   shift, and go to state 64
    'A'   shift, and go to state 65
    'B'   shift, and go to state 66
    'c'   shift, and go to state 67
    'd'   shift, and go to state 68
    'e'   shift, and go to state 69
    'f'   shift, and go to state 70
    'g'   shift, and go to state 71
    'a'   shift, and go to state 72

    key       go to state 73
    key_spec  go to state 74
    keynote   go to state 75
    basenote  go to state 76


state 31

    8 fields: fields field .

    $default  reduce using rule 8 (fields)


state 32

    2 abc_header: FIELD_NUMBER NUMBER title_fields . fields

    $default  reduce using rule 7 (fields)

    fields  go to state 77


state 33

    9 field: FIELD_NUMBER NUMBER . eol

    '\n'  shift, and go to state 8

    eol  go to state 78


state 34

   10 field: FIELD_TITLE STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 79


state 35

   11 field: FIELD_AREA STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 80


state 36

   12 field: FIELD_BOOK STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 81


state 37

   13 field: FIELD_COMPOSER STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 82


state 38

   14 field: FIELD_DISCOGRAPHY STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 83


state 39

   15 field: FIELD_GROUP STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 84


state 40

   16 field: FIELD_HISTORY STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 85


state 41

   45 note_length: NUMBER . '/' NUMBER
   46            | NUMBER .

    '/'  shift, and go to state 86

    $default  reduce using rule 46 (note_length)


state 42

   17 field: FIELD_DEFAULT_LENGTH note_length . eol

    '\n'  shift, and go to state 8

    eol  go to state 87


state 43

   38 meter_fraction: NUMBER . '/' NUMBER

    '/'  shift, and go to state 88


state 44

   36 meter: 'C' .

    $default  reduce using rule 36 (meter)


state 45

   18 field: FIELD_METER meter . eol

    '\n'  shift, and go to state 8

    eol  go to state 89


state 46

   37 meter: meter_fraction .

    $default  reduce using rule 37 (meter)


state 47

   19 field: FIELD_NOTES STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 90


state 48

   20 field: FIELD_ORIGIN STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 91


state 49

   21 field: FIELD_PARTS STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 92


state 50

   44 note_length_strict: NUMBER . '/' NUMBER
   63 tempo: NUMBER .

    '/'  shift, and go to state 93

    $default  reduce using rule 63 (tempo)


state 51

   64 tempo: 'C' . NUMBER '=' NUMBER
   65      | 'C' . '=' NUMBER

    NUMBER  shift, and go to state 94
    '='     shift, and go to state 95


state 52

   66 tempo: note_length_strict . '=' NUMBER

    '='  shift, and go to state 96


state 53

   22 field: FIELD_TEMPO tempo . eol

    '\n'  shift, and go to state 8

    eol  go to state 97


state 54

   23 field: FIELD_RHYTHM STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 98


state 55

   24 field: FIELD_SOURCE STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 99


state 56

   25 field: FIELD_TRANSCRIPTION STRING . eol

    '\n'  shift, and go to state 8

    eol  go to state 100


state 57

   28 key: "HP" .

    $default  reduce using rule 28 (key)


state 58

   29 key: "Hp" .

    $default  reduce using rule 29 (key)


state 59

   61 basenote: 'b' .

    $default  reduce using rule 61 (basenote)


state 60

   48 basenote: 'C' .

    $default  reduce using rule 48 (basenote)


state 61

   49 basenote: 'D' .

    $default  reduce using rule 49 (basenote)


state 62

   50 basenote: 'E' .

    $default  reduce using rule 50 (basenote)


state 63

   51 basenote: 'F' .

    $default  reduce using rule 51 (basenote)


state 64

   52 basenote: 'G' .

    $default  reduce using rule 52 (basenote)


state 65

   53 basenote: 'A' .

    $default  reduce using rule 53 (basenote)


state 66

   54 basenote: 'B' .

    $default  reduce using rule 54 (basenote)


state 67

   55 basenote: 'c' .

    $default  reduce using rule 55 (basenote)


state 68

   56 basenote: 'd' .

    $default  reduce using rule 56 (basenote)


state 69

   57 basenote: 'e' .

    $default  reduce using rule 57 (basenote)


state 70

   58 basenote: 'f' .

    $default  reduce using rule 58 (basenote)


state 71

   59 basenote: 'g' .

    $default  reduce using rule 59 (basenote)


state 72

   60 basenote: 'a' .

    $default  reduce using rule 60 (basenote)


state 73

   26 field: FIELD_KEY key . eol

    '\n'  shift, and go to state 8

    eol  go to state 101


state 74

   27 key: key_spec .

    $default  reduce using rule 27 (key)


state 75

   30 key_spec: keynote . mode_spec ' ' global_accidental
   31         | keynote . ' ' global_accidental

    ' '  shift, and go to state 102
    'm'  shift, and go to state 103
    'M'  shift, and go to state 104

    mode_spec   go to state 105
    mode        go to state 106
    mode_minor  go to state 107


state 76

   32 keynote: basenote . key_accidental
   33        | basenote .

    '#'  shift, and go to state 108
    'b'  shift, and go to state 109

    $default  reduce using rule 33 (keynote)

    key_accidental  go to state 110


state 77

    2 abc_header: FIELD_NUMBER NUMBER title_fields fields .
    8 fields: fields . field

    FIELD_NUMBER          shift, and go to state 13
    FIELD_TITLE           shift, and go to state 14
    FIELD_AREA            shift, and go to state 15
    FIELD_BOOK            shift, and go to state 16
    FIELD_COMPOSER        shift, and go to state 17
    FIELD_DISCOGRAPHY     shift, and go to state 18
    FIELD_GROUP           shift, and go to state 19
    FIELD_HISTORY         shift, and go to state 20
    FIELD_DEFAULT_LENGTH  shift, and go to state 21
    FIELD_METER           shift, and go to state 22
    FIELD_NOTES           shift, and go to state 23
    FIELD_ORIGIN          shift, and go to state 24
    FIELD_PARTS           shift, and go to state 25
    FIELD_TEMPO           shift, and go to state 26
    FIELD_RHYTHM          shift, and go to state 27
    FIELD_SOURCE          shift, and go to state 28
    FIELD_TRANSCRIPTION   shift, and go to state 29
    FIELD_KEY             shift, and go to state 30

    $default  reduce using rule 2 (abc_header)

    field  go to state 31


state 78

    9 field: FIELD_NUMBER NUMBER eol .

    $default  reduce using rule 9 (field)


state 79

   10 field: FIELD_TITLE STRING eol .

    $default  reduce using rule 10 (field)


state 80

   11 field: FIELD_AREA STRING eol .

    $default  reduce using rule 11 (field)


state 81

   12 field: FIELD_BOOK STRING eol .

    $default  reduce using rule 12 (field)


state 82

   13 field: FIELD_COMPOSER STRING eol .

    $default  reduce using rule 13 (field)


state 83

   14 field: FIELD_DISCOGRAPHY STRING eol .

    $default  reduce using rule 14 (field)


state 84

   15 field: FIELD_GROUP STRING eol .

    $default  reduce using rule 15 (field)


state 85

   16 field: FIELD_HISTORY STRING eol .

    $default  reduce using rule 16 (field)


state 86

   45 note_length: NUMBER '/' . NUMBER

    NUMBER  shift, and go to state 111


state 87

   17 field: FIELD_DEFAULT_LENGTH note_length eol .

    $default  reduce using rule 17 (field)


state 88

   38 meter_fraction: NUMBER '/' . NUMBER

    NUMBER  shift, and go to state 112


state 89

   18 field: FIELD_METER meter eol .

    $default  reduce using rule 18 (field)


state 90

   19 field: FIELD_NOTES STRING eol .

    $default  reduce using rule 19 (field)


state 91

   20 field: FIELD_ORIGIN STRING eol .

    $default  reduce using rule 20 (field)


state 92

   21 field: FIELD_PARTS STRING eol .

    $default  reduce using rule 21 (field)


state 93

   44 note_length_strict: NUMBER '/' . NUMBER

    NUMBER  shift, and go to state 113


state 94

   64 tempo: 'C' NUMBER . '=' NUMBER

    '='  shift, and go to state 114


state 95

   65 tempo: 'C' '=' . NUMBER

    NUMBER  shift, and go to state 115


state 96

   66 tempo: note_length_strict '=' . NUMBER

    NUMBER  shift, and go to state 116


state 97

   22 field: FIELD_TEMPO tempo eol .

    $default  reduce using rule 22 (field)


state 98

   23 field: FIELD_RHYTHM STRING eol .

    $default  reduce using rule 23 (field)


state 99

   24 field: FIELD_SOURCE STRING eol .

    $default  reduce using rule 24 (field)


state 100

   25 field: FIELD_TRANSCRIPTION STRING eol .

    $default  reduce using rule 25 (field)


state 101

   26 field: FIELD_KEY key eol .

    $default  reduce using rule 26 (field)


state 102

   31 key_spec: keynote ' ' . global_accidental
   39 mode_spec: ' ' . mode

    ACCIDENTAL  shift, and go to state 117
    'm'         shift, and go to state 103
    'M'         shift, and go to state 104

    mode               go to state 118
    mode_minor         go to state 107
    global_accidental  go to state 119
    accidental         go to state 120


state 103

   42 mode_minor: 'm' .

    $default  reduce using rule 42 (mode_minor)


state 104

   43 mode_minor: 'M' .

    $default  reduce using rule 43 (mode_minor)


state 105

   30 key_spec: keynote mode_spec . ' ' global_accidental

    ' '  shift, and go to state 121


state 106

   40 mode_spec: mode .

    $default  reduce using rule 40 (mode_spec)


state 107

   41 mode: mode_minor .

    $default  reduce using rule 41 (mode)


state 108

   34 key_accidental: '#' .

    $default  reduce using rule 34 (key_accidental)


state 109

   35 key_accidental: 'b' .

    $default  reduce using rule 35 (key_accidental)


state 110

   32 keynote: basenote key_accidental .

    $default  reduce using rule 32 (keynote)


state 111

   45 note_length: NUMBER '/' NUMBER .

    $default  reduce using rule 45 (note_length)


state 112

   38 meter_fraction: NUMBER '/' NUMBER .

    $default  reduce using rule 38 (meter_fraction)


state 113

   44 note_length_strict: NUMBER '/' NUMBER .

    $default  reduce using rule 44 (note_length_strict)


state 114

   64 tempo: 'C' NUMBER '=' . NUMBER

    NUMBER  shift, and go to state 122


state 115

   65 tempo: 'C' '=' NUMBER .

    $default  reduce using rule 65 (tempo)


state 116

   66 tempo: note_length_strict '=' NUMBER .

    $default  reduce using rule 66 (tempo)


state 117

   62 accidental: ACCIDENTAL .

    $default  reduce using rule 62 (accidental)


state 118

   39 mode_spec: ' ' mode .

    $default  reduce using rule 39 (mode_spec)


state 119

   31 key_spec: keynote ' ' global_accidental .

    $default  reduce using rule 31 (key_spec)


state 120

   47 global_accidental: accidental . basenote

    'b'  shift, and go to state 59
    'C'  shift, and go to state 60
    'D'  shift, and go to state 61
    'E'  shift, and go to state 62
    'F'  shift, and go to state 63
    'G'  shift, and go to state 64
    'A'  shift, and go to state 65
    'B'  shift, and go to state 66
    'c'  shift, and go to state 67
    'd'  shift, and go to state 68
    'e'  shift, and go to state 69
    'f'  shift, and go to state 70
    'g'  shift, and go to state 71
    'a'  shift, and go to state 72

    basenote  go to state 123


state 121

   30 key_spec: keynote mode_spec ' ' . global_accidental

    ACCIDENTAL  shift, and go to state 117

    global_accidental  go to state 124
    accidental         go to state 120


state 122

   64 tempo: 'C' NUMBER '=' NUMBER .

    $default  reduce using rule 64 (tempo)


state 123

   47 global_accidental: accidental basenote .

    $default  reduce using rule 47 (global_accidental)


state 124

   30 key_spec: keynote mode_spec ' ' global_accidental .

    $default  reduce using rule 30 (key_spec)
